[gd_scene load_steps=16 format=4 uid="uid://cgmr22rr2e0s7"]

[ext_resource type="Script" path="res://scripts/game_logic.gd" id="1_x0o2t"]
[ext_resource type="PackedScene" uid="uid://cyxcsqnxjfij4" path="res://scenes/level_anim.tscn" id="2_62l67"]
[ext_resource type="Texture2D" uid="uid://vfki023yaxbl" path="res://sprites/StartButton.png" id="2_s0di0"]
[ext_resource type="PackedScene" uid="uid://eskjbpwx220j" path="res://scenes/win_flag.tscn" id="2_vdmat"]
[ext_resource type="Texture2D" uid="uid://eb6jcs4onbsv" path="res://sprites/BGLevel.png" id="3_0r8am"]
[ext_resource type="Texture2D" uid="uid://klw01bp52uw7" path="res://sprites/RedTotemButton.png" id="3_1c54r"]
[ext_resource type="PackedScene" uid="uid://fpptvpvtjw4w" path="res://scenes/player.tscn" id="3_js3e4"]
[ext_resource type="Texture2D" uid="uid://cls8psijj0h33" path="res://sprites/back.png" id="3_mqwya"]
[ext_resource type="FontFile" uid="uid://bmmn1uwaaao6p" path="res://fonts/Outfit-ExtraBold.ttf" id="3_xorgw"]
[ext_resource type="Texture2D" uid="uid://d0w1d27cdsvc5" path="res://sprites/BlueTotemButton.png" id="4_dmlfx"]
[ext_resource type="Texture2D" uid="uid://dgt0sso7bf1fc" path="res://sprites/Delete.png" id="6_1bdul"]
[ext_resource type="Texture2D" uid="uid://bldfdab1yqjo5" path="res://sprites/Tileset.png" id="9_54fhu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4ghv"]
size = Vector2(65, 78)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jn8hd"]
texture = ExtResource("9_54fhu")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_21fpx"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_jn8hd")

[node name="LevelTemplate" type="Node2D"]
script = ExtResource("1_x0o2t")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 616.0
offset_bottom = 364.0

[node name="BG" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -596.0
offset_top = -324.0
offset_right = 556.0
offset_bottom = 324.0
grow_horizontal = 2
texture = ExtResource("3_0r8am")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -546.0
offset_top = -294.0
offset_right = -229.695
offset_bottom = -216.0
theme_override_constants/separation = 10

[node name="BackButton" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_mqwya")

[node name="RedButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("3_1c54r")

[node name="RedTotemsLeft" type="Label" parent="Control/HBoxContainer/RedButton"]
layout_mode = 1
offset_left = 24.0
offset_top = -24.0
offset_right = 97.715
offset_bottom = 60.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("3_xorgw")
theme_override_font_sizes/font_size = 66
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("4_dmlfx")

[node name="BlueTotemsLeft" type="Label" parent="Control/HBoxContainer/BlueButton"]
layout_mode = 0
offset_left = 24.0
offset_top = -24.0
offset_right = 97.715
offset_bottom = 60.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("3_xorgw")
theme_override_font_sizes/font_size = 66
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("6_1bdul")

[node name="DeleteArea" type="Area2D" parent="Control/HBoxContainer/DeleteButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/HBoxContainer/DeleteButton/DeleteArea"]
position = Vector2(33.5, 39)
shape = SubResource("RectangleShape2D_l4ghv")

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 554.0
offset_top = -303.0
offset_right = 610.0
offset_bottom = -241.0
scale = Vector2(-1, 1)
icon = ExtResource("2_s0di0")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAARAAkAAQABAAAAAAAQAAkAAQAAAAAAAAAPAAkAAQABAAAAAAAOAAkAAQABAAEAAAANAAkAAQAAAAEAAAAMAAkAAQABAAAAAAALAAkAAQAAAAAAAAAKAAkAAQAAAAEAAAAJAAkAAQABAAEAAAAIAAkAAQAAAAAAAAAHAAkAAQABAAAAAAAGAAkAAQAAAAEAAAAFAAkAAQABAAEAAAAEAAkAAQAAAAEAAAADAAkAAQABAAAAAAACAAkAAQAAAAAAAAABAAkAAQABAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAEAAAABAAoAAQAAAAAAAAACAAoAAQABAAAAAAADAAoAAQABAAEAAAAEAAoAAQAAAAAAAAAFAAoAAQAAAAEAAAAGAAoAAQABAAAAAAAHAAoAAQAAAAEAAAAIAAoAAQAAAAAAAAAJAAoAAQABAAEAAAAKAAoAAQABAAAAAAALAAoAAQABAAEAAAAMAAoAAQAAAAAAAAANAAoAAQAAAAEAAAAOAAoAAQABAAAAAAAPAAoAAQAAAAAAAAAQAAoAAQAAAAEAAAARAAoAAQABAAAAAAA=")
tile_set = SubResource("TileSet_21fpx")

[node name="WinFlag" parent="." instance=ExtResource("2_vdmat")]
position = Vector2(660, 511)

[node name="Player" parent="." instance=ExtResource("3_js3e4")]
unique_name_in_owner = true
position = Vector2(43, 536)
scale = Vector2(0.5, 0.5)

[node name="RedTotemTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BlueTotemTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="level_anim" parent="." instance=ExtResource("2_62l67")]

[connection signal="pressed" from="Control/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/RedButton" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/BlueButton" to="." method="_on_blue_button_pressed"]
[connection signal="area_entered" from="Control/HBoxContainer/DeleteButton/DeleteArea" to="." method="_on_delete_area_area_entered"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="body_entered" from="WinFlag" to="." method="_on_win_entered"]
[connection signal="timeout" from="RedTotemTimer" to="." method="_on_red_totem_timer_timeout"]
[connection signal="timeout" from="BlueTotemTimer" to="." method="_on_blue_totem_timer_timeout"]
[connection signal="level_anim_finished" from="level_anim" to="." method="_on_level_anim_finished"]
